Fixed accidental deletion on tablet version.

--- a/css/index.css
+++ b/css/index.css
@@ -444,7 +444,7 @@ footer {
         margin: 0 3%;
     }
     .contact {
-        margin: 0 %;
+        margin: 0 3%;
     }
 }
 
